CPS search should not use `skip_unavailable`